--- a/package.json
+++ b/package.json
@@ -1,56 +1,46 @@
 {
   "name": "realm",
-  "version": "0.0.1",
-  "description": "Realm project",
-  "main": "index.js",
+  "description": "brealm project",
+  "version": "1.0.0",
+  "private": false,
+  "scripts": {
+    "server": "node src/server/server.js",
+    "watch": "webpack --watch",
+    "build": "webpack"
+  },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "good": "^7.1.0",
-    "good-console": "^6.4.0",
-    "good-squeeze": "^5.0.1",
-    "hapi": "^16.1.0",
-    "inert": "^4.1.0",
-    "normalize.css": "^5.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "hapi": "^17.5.2",
+    "inert": "^5.1.0",
+    "normalize.css": "^8.0.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "webpack": "^3.12.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
-    "babel-plugin-rewire": "^1.0.0",
-    "babel-runtime": "^6.23.0",
-    "css-loader": "^0.27.3",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint": "^3.17.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
-    "glob": "^7.1.1",
-    "html-loader": "^0.4.5",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.17.4",
-    "node-libs-browser": "^2.0.0",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^1.3.3",
-    "react-hot-loader": "^1.3.1",
-    "react-router": "^4.0.0",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.14.0",
-    "webpack": "^2.2.1"
-  },
-  "scripts": {
-    "serve": "node src/js/server/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/warpDriveCore/realm.git"
-  },
-  "author": "Andrew Kravchuk",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/warpDriveCore/realm/issues"
-  },
-  "homepage": "https://github.com/warpDriveCore/realm#readme"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "breakpoint-sass": "^2.7.1",
+    "breakpoint-slicer": "^2.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "html-webpack-include-assets-plugin": "0.0.5",
+    "html-webpack-plugin": "^2.28.0",
+    "md5": "^2.2.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0"
+  }
 }
