--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "realm",
-  "description": "brealm project",
+  "description": "realm project",
   "version": "1.0.0",
   "private": false,
   "scripts": {
@@ -9,6 +9,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "hapi": "^17.5.2",
@@ -31,6 +32,11 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-include-assets-plugin": "0.0.5",
