--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^2.28.0",
     "md5": "^2.2.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.18.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
