--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^1.0.0",
+    "d3": "^5.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "hapi": "^17.5.2",
     "inert": "^5.1.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
