--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-devtools": "^3.4.1",
     "webpack": "^3.12.0"
   },
   "devDependencies": {
