--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "d3": "^5.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
