--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hapi": "^17.5.2",
     "inert": "^5.1.0",
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
