--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "d3": "^5.5.0",
+    "dotenv": "^6.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "hapi": "^17.5.2",
     "inert": "^5.1.0",
