--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,9 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "dd:43:02:18:87:aa:70:be:a6:f6:80:33:68:ca:3b:b3"
-
-      - run: yarn
-      - run: npm run build
       
       # prepare remote directories for deployment
-      - run: ssh "$DROPLET_CREDENTIALS" "rm package.json && rm -rf ./public && rm -rf ./server && rm -rf ./node_modules && mkdir -p public"
-
-      # deploy to dev and install
-      - run: sftp -b ./package.json "$DROPLET_CREDENTIALS"
-      - run: sftp -b ./public "$DROPLET_CREDENTIALS"
-      - run: sftp -b ./server "$DROPLET_CREDENTIALS"
-
-      - run: ssh "$DROPLET_CREDENTIALS" "cd $DROPLET_DEPLOY_PATH && rm -rf node_modules && yarn && pm2 restart realm"
+      - run: ssh "$DROPLET_CREDENTIALS" "cd $DROPLET_DEPLOY_PATH/tools/deploy.sh"
 workflows:
   version: 2
   build-deploy:
@@ -41,3 +31,5 @@ workflows:
           filters:
             branches:
               only: master
+
+
