--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       # add ssh keys
       - add_ssh_keys:
           fingerprints:
-            - "b0:22:b6:a7:59:6e:38:68:7b:8d:76:cf:0e:bf:db:40"
+            - "SHA256:OMyEoP6P7iWsVwZwMeQmHrHmetQCHiPVjPk9hxfgkRA"
 
       # prepare remote directories for deployment
       - run: ssh "$DROPLET_CREDENTIALS" "bash -s" < ./tools/deploy.sh
