--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,10 @@ jobs:
             - "SHA256:OMyEoP6P7iWsVwZwMeQmHrHmetQCHiPVjPk9hxfgkRA"
 
       # prepare remote directories for deployment
-      - run: ssh "$DROPLET_CREDENTIALS" "bash -s" < ./tools/deploy.sh
+      - run: 
+          name: Deploy Over SSH
+          command: |
+            ssh $SSH_USER@$SSH_HOST "bash -s" < ./tools/deploy.sh
 workflows:
   version: 2
   build-deploy:
