--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       # prepare remote directories for deployment
       - run: 
           name: Scan
-          command: ssh-keyscan SSH_HOST >> ~/.ssh/known_hosts
+          command: ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts
       - run: 
           name: Deploy Over SSH
           command: |
