--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run: 
           name: Deploy Over SSH
           command: |
-            ssh $SSH_USER@$SSH_HOST "cd $DEPLOY_PATH && bash ./tools/deploy.sh && pm2 restart realm"
+            ssh $SSH_USER@$SSH_HOST "cd $DEPLOY_PATH && git pull && rm -rf node_modules && yarn && npm run build && pm2 restart realm"
 workflows:
   version: 2
   build-deploy:
